# python-markdown-autodirection

./: .travis.yml  README.md  autodirection.py  setup.cfg  test.py  tox.ini
