[metadata]
name = markdown-autodirection
version = 0.1
description = Extension for markdown package to set paragraph direction to `auto`
long_description = file:README.md
license = BSD 3-Clause License
license_file = LICENSE
url = https://github.com/aliva/python-markdown-autodirection/

[options]
py_modules = autodirection
