[metadata]
name = markdown-autodirection
version = 0.3
description = Extension for markdown package to set paragraph direction to `auto`
long_description = file:README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_file = LICENSE
url = https://github.com/aliva/python-markdown-autodirection/

[options]
py_modules = autodirection
